2000-05-26  Laurent Pautet  <pautet@inf.enst.fr>

	* all files: Update copyright.

	* Makefile.am, Makefile.in: Add s-gartyp.adb.

	* s-gartyp.ads, s-gartyp.adb: Add partition id marshalling
 	procedures. Partition_ID is now on two octets (pids > 255).

	* s-garhea.adb, s-rpc.adb: Use new Garlic.Types
 	subprograms. Especially in System.RPC do not marshall
 	RPC.Partition_ID as they are not marshalled the same way
	Garlic.Types.Partition_ID are.

	* constants.c, constants.sh: Remove RCS keyword.

	* s-gardeb.adb, s-gardeb.ads: Add procedure Debug_All to active
 	debugging info from gdb. To do so, the unit banner is not
	independent from the unit debugging info activation.

	* s-garpar.adb, s-garpar.ads: Use new Garlic.Debug specification
 	especially in Dump_Partition_Table.

	* s-garsto.adb: Catch properly error that occurs when the user
 	tries to use a data storage support that is not available.
	
2000-05-24  Laurent Pautet  <pautet@inf.enst.fr>

	* s-gaphlo.adb, s-gaphlo.ads: Add subprograms Get_Name and
	Get_Data to extract from a standard location the support name and
	the support data.

	* s-garsto.adb: Fix bad debugging env variable. Use new
 	subprograms from Garlic.Physical_Location.
	
	* s-gardfs.ads, s-gardfs.adb: Use new subprograms from
 	Garlic.Physical_Location. Add a directory separator to specific
	data and analyze default data location correctly. Do not pass
	default data location to Initialize anymore.

	* s-garpar.adb: Use partition name as key parameter to read
 	partition info. Partition name is now a key parameter because of
 	passive partitions. These partitions cannot elaborate themselves
 	as they have no elaboration code. So, duplicated registration
 	conflicts are resolved using the partition name.  Fix a bug due to
 	a bad boot partition initialization for passive partitions. Fix a
 	bug in Get_Protocol that caused this subprogram to incorrectly
 	raise a assert error when in fact a communication error was